# AutoNota

./: .gitignore  CMakeLists.txt  LoginFlow.scxml  donator.cpp  donator.h  loginmanager.cpp  loginmanager.h  main.cpp  settingsmanager.cpp  settingsmanager.h
Assets/: app.db  autonota.rc  index.html  qtquickcontrols2.conf
Installer/config/: config.xml  controller.qs
ItemModels/: usersitemmodel.cpp  usersitemmodel.h
Managers/: donationmanager.cpp  donationmanager.h  loginmanager.cpp  loginmanager.h  settingsmanager.cpp  settingsmanager.h
Models/: user.cpp  user.h
Views/: AlertBox.qml  CreateUserDialog.qml  InfoDialog.qml  Main.qml  SettingsDialog.qml  UsersDialog.qml
